/*
 * Copyright 2013-2014 SmartBear Software
 * Copyright 2014-2023 The TestFX Contributors
 *
 * Licensed under the EUPL, Version 1.1 or - as soon they will be approved by the
 * European Commission - subsequent versions of the EUPL (the "Licence"); You may
 * not use this work except in compliance with the Licence.
 *
 * You may obtain a copy of the Licence at:
 * http://ec.europa.eu/idabc/eupl
 *
 * Unless required by applicable law or agreed to in writing, software distributed
 * under the Licence is distributed on an "AS IS" basis, WITHOUT WARRANTIES OR
 * CONDITIONS OF ANY KIND, either express or implied. See the Licence for the
 * specific language governing permissions and limitations under the Licence.
 */
apply plugin: 'java-library'
apply plugin: 'org.openjfx.javafxplugin'

ext.pomName = 'TestFX Core'
ext.pomDescription = 'TestFX core library'
ext.moduleName = 'org.testfx'
ext.openjfxVersion = '23.0.1'
ext.headlessSDKPath= "${System.properties['user.home']}${File.separator}Downloads${File.separator}javafx-sdk-23"

repositories {
    mavenCentral()
    mavenLocal()
}

javafx {
    sdk = headlessSDKPath
    version = openjfxVersion
    modules = [ 'javafx.controls', 'javafx.swing', 'javafx.fxml' ]
}

dependencies {
    implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
    implementation "org.assertj:assertj-core:3.26.3"
    testImplementation "org.assertj:assertj-core:3.26.3"
    implementation 'org.osgi:osgi.core:8.0.0'

    testImplementation ("junit:junit:4.13.2") {
        exclude group: 'org.hamcrest', module: 'hamcrest-core'
    }
    // Empty shim JAR for JUnit4.
    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '3.0'

    testImplementation "org.mockito:mockito-core:5.14.2"

    configurations {
        apiElements {
            sourceCompatibility = JavaVersion.VERSION_17
            targetCompatibility = JavaVersion.VERSION_17
        }
    }
}

//    javadoc {
//        source = sourceSets.main.allJava
//        //dependsOn compileModuleInfoJava
//        if (JavaVersion.current().isJava9Compatible()) {
//            options.addBooleanOption('html5', true)
//
//            inputs.property("moduleName", moduleName)
//
//            doFirst {
//                options.addStringOption('-module-path', classpath.asPath)
//                options.addStringOption('-add-reads', "$moduleName=org.assertj.core")
//                options.addMultilineStringsOption('-add-modules').setValue([
//                        'javafx.graphics', 'javafx.controls', 'javafx.swing', 'org.hamcrest', 'org.assertj.core'])
//                options.addMultilineStringsOption('-add-exports').setValue([
//                        'javafx.graphics/com.sun.javafx.application=org.testfx',
//                        'javafx.graphics/com.sun.glass.ui=org.testfx'])
//            }
//        }
//    }

//    test {
//        if (JavaVersion.current().isJava9Compatible()) {
//            inputs.property("moduleName", moduleName)
//            doFirst {
//                jvmArgs = [
//                        '--module-path', classpath.asPath,
//                        '--add-modules', 'ALL-MODULE-PATH',
//                        '--add-exports', 'org.testfx/org.testfx.service.locator.impl=junit',
//                        '--add-exports', 'org.testfx/org.testfx.service.query.impl=junit',
//                        '--add-exports', 'org.testfx/org.testfx.service.finder.impl=junit',
//                        '--add-exports', 'org.testfx/org.testfx.service.adapter.impl=junit',
//                        '--add-exports', 'org.testfx/org.testfx.service.support.impl=junit',
//                        '--add-exports', 'org.testfx/org.testfx.robot.impl=junit',
//                        '--add-exports', 'org.testfx/org.testfx.toolkit.impl=junit',
//                        '--add-exports', 'org.testfx/org.testfx.cases=junit',
//                        '--add-exports', 'org.testfx/org.testfx.cases.acceptance=junit',
//                        '--add-exports', 'org.testfx/org.testfx.cases.integration=junit',
//                        '--add-exports', 'org.testfx/org.testfx.cases.issue=junit',
//                        '--add-reads', "$moduleName=junit",
//                        '--add-reads', "$moduleName=javafx.fxml",
//                        '--add-opens', "$moduleName/org.testfx.service.query.impl=org.testfx",
//                        '--add-opens', "javafx.graphics/com.sun.glass.ui=$moduleName",
//                        '--add-exports', "javafx.graphics/com.sun.glass.ui=$moduleName",
//                        '--add-exports', "javafx.graphics/com.sun.javafx.application=$moduleName",
//                        '--add-exports', 'javafx.graphics/com.sun.glass.ui=org.testfx.monocle',
//                        '--add-exports', 'javafx.graphics/com.sun.javafx.application=org.testfx.monocle',
//                        '--add-exports', 'javafx.graphics/com.sun.glass.ui.delegate=org.testfx.monocle',
//                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.destinationDirectory.asFile.get(), sourceSets.test.resources.srcDirs).asPath,
//                ]
//                classpath = files()
//            }
//        }
//    }

